2003-05-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_create_full_path), (totem_action_open_files):
	work-around another egg-recent bug wrt. local filenames

2003-05-18  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_size_request),
	(bacon_video_widget_size_allocate): Adding debug for fixing the
	allocation problem
	* src/gstvideowidget.c: (gst_video_widget_expose),
	(gst_video_widget_size_request), (gst_video_widget_allocate): Fixed
	some bugs with minimum size and putting some debug for allocation
	problem
	* src/totem.c: (totem_action_fullscreen_toggle),
	(video_widget_create): Added a name to bvw, changed fullscreen
	behaviour to disbable auto_resize

2003-05-17  Bastien Nocera  <hadess@hadess.net>

	* configure.in: really fix --disable-lirc
	* src/totem.c: (totem_create_full_path), (totem_is_media),
	(update_media_menu_items): fix playback of dvds, and all

2003-05-17  Bastien Nocera  <hadess@hadess.net>

	* configure.in: added a --disable-lirc option for packagers

2003-05-17  Bastien Nocera  <hadess@hadess.net>

	* configure.in: fixed a warning, and make sure that Linux systems
	are detected properly

2003-05-13  Bastien Nocera  <hadess@hadess.net>

	* README:
	* data/totem.glade:
	* src/bacon-video-widget-gst.c: (bacon_video_widget_class_init),
	(bacon_video_widget_set_fullscreen), (bacon_video_widget_new):
	* src/bacon-video-widget-xine.c: (bacon_video_widget_class_init),
	(dest_size_cb), (frame_output_cb), (bacon_video_widget_realize),
	(bacon_video_widget_unrealize), (bacon_video_widget_set_property),
	(bacon_video_widget_get_property),
	(bacon_video_widget_set_fullscreen),
	(bacon_video_widget_set_show_cursor),
	(bacon_video_widget_ratio_fits_screen):
	* src/bacon-video-widget.h:
	* src/totem-preferences.c: (on_checkbutton2_toggled),
	(deinterlace_changed_cb), (auto_resize_changed_cb),
	(show_vfx_changed_cb), (mediadev_changed_cb),
	(totem_setup_preferences), (totem_preferences_tvout_setup),