@@ -242,8 +242,6 @@ TODO
 - Browser plugin ? See for examples:
   http://lxr.mozilla.org/seamonkey/source/modules/plugin/samples/default/unix/ for examples
   http://devedge.netscape.com/library/manuals/2002/plugin/1.0/preface.html
-- Read the URI in .desktop files and add that to the playlist (otherwise we
-  can't drop stuff we dragged from Totem)
 - have a "progress" thing going when adding more than a couple of files
 - check that the fake event is generated more often, depending on the
   intervals of the screensaver
